--- a/package.json
+++ b/package.json
@@ -10,5 +10,9 @@
   "bugs": {
     "url": "https://github.com/hopeless-programmer-online/sql.ts/issues"
   },
-  "homepage": "https://github.com/hopeless-programmer-online/sql.ts#readme"
+  "homepage": "https://github.com/hopeless-programmer-online/sql.ts#readme",
+  "devDependencies": {
+    "ts-node": "^10.9.1",
+    "typescript": "^5.0.4"
+  }
 }
