--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
     "ts-node": "^10.9.1",
     "typescript": "^5.2.2"
   },
-  "dependencies": {},
+  "dependencies": {
+    "sqlite3": "^5.1.6"
+  },
   "author": {
     "name": "Hopeless Programmer",
     "email": "me@hopeless-programmer.online",
